fix stying spacing and html

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ h2 {
   width: 75%;
   float: left;
   padding-right: 30px;
+  position: relative;
 }
 
 .other-posts {
@@ -77,4 +78,9 @@ h2 {
   height: 150px;
   width: auto;
   padding-bottom: 10px;
+}
+.date {
+  position: absolute;
+  top: 10px;
+  right: 30px;
 }
